--- a/product-preview-card-component-main/style.css
+++ b/product-preview-card-component-main/style.css
@@ -5,23 +5,12 @@ body{
 
 }
 
+.card {
+    margin: auto;
 
-
-
-
-
-
-/* .card{
-    display: grid;
-    grid-template-columns: max-content 200px 1fr;
     border-radius: 5px, 5px, 0, 0;
-} */
+}
 
-/* .card img{
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-} */
 /* .container{
     padding: 2px 16px;
 } */
@@ -31,7 +20,7 @@ body{
 }
 
 .product-card .left {
-    display: float;
+    float: left;
     width: 50%;
 }
 
